<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">ShapeMinder</string>
    <string name="eMailInput">E-Mail Adresse eingeben...</string>
    <string name="nameInput">Vor - und Nachnamen eingeben...</string>
    <string name="passwordInput">Passwort eingeben...</string>
    <string name="passwordRepeatInput">Passwort wiederholen...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language">Deutsch</string>
    <string name="language_english">English</string>
    <string name="language_german">Deutsch</string>
    <string name="language_turkish">Türkçe</string>
    <string name="language_norwegian">Norsk</string>
    <string name="language_french">Français</string>
    <string name="language_spanish">Español</string>
    <string name="title1">Erholung</string>
    <string name="title2">Training</string>
    <string name="title3">Ernährung</string>
    <string name="text1">
        Erholung ist entscheidend für erfolgreiches Fitnesstraining. Sie ermöglicht es den Muskeln, sich nach dem Training zu regenerieren und stärker zu werden. Qualitätsschlaf, richtige Ernährung und aktive Erholung sind wichtig. Ein ausgewogener Trainingsplan mit Phasen der Belastung und Erholung sowie Stressmanagement unterstützen langfristige Fortschritte. Hier sind einige wichtige Punkte, die du bei der Erholung im Fitness-Training beachten solltest: Muskelregeneration: Während des Trainings entstehen kleine Risse in den Muskelfasern, die sie strapazieren. Die Erholungsphase ermöglicht es den Muskeln, sich zu reparieren und stärker zu werden. Diese Regenerationszeit ist entscheidend für den Muskelaufbau und die Vermeidung von Überlastungsschäden. Schlaf: Qualitätsschlaf ist für die Erholung von größter Bedeutung. Während des Schlafs setzt der Körper Wachstumshormone frei, die den Muskelaufbau und die Reparatur unterstützen. Es wird empfohlen, 7-9 Stunden Schlaf pro Nacht zu bekommen, um optimale Ergebnisse zu erzielen. Ernährung: Die richtige Ernährung spielt eine entscheidende Rolle bei der Erholung. Nach dem Training benötigt dein Körper Nährstoffe wie Protein und Kohlenhydrate, um sich zu regenerieren und Energie wiederherzustellen. Eine ausgewogene Ernährung hilft auch dabei, Entzündungen zu reduzieren und den Heilungsprozess zu beschleunigen."</string>
    <string name="text2">Krafttraining ist eine Form des Trainings, die darauf abzielt, die Muskelkraft, Ausdauer
        und Masse zu verbessern. Es nutzt Widerstand, sei es durch Gewichte, Körpergewicht oder andere Geräte, um
        die Muskeln zu belasten und zu stimulieren. Die Vorteile des Krafttrainings sind vielfältig: Es hilft,
        Muskelmasse aufzubauen, den Stoffwechsel zu steigern, die Körperhaltung zu verbessern und das Verletzungsrisiko
        zu verringern. Krafttraining kann sowohl für Fitness-Enthusiasten als auch für Sportler von großem Nutzen sein,
        da es die Leistung in verschiedenen Bereichen wie Schnelligkeit, Sprungkraft und Ausdauer steigern kann. Ein
        gut geplantes Krafttrainingsprogramm, das individuell an die Ziele und Bedürfnisse angepasst ist, ist entscheidend
        für effektive Ergebnisse und eine sichere Durchführung der Übungen.
    </string>
    <string name="text3">
        Eine ausgewogene Ernährung ist entscheidend für den Erfolg im Kraftsport. Kraftsportler
        sollten auf eine ausreichende Proteinzufuhr achten, um Muskelwachstum und -reparatur zu unterstützen.
        Kohlenhydrate liefern Energie für das Training, während gesunde Fette die Hormonproduktion und Entzündungskontrolle
        fördern. Obst, Gemüse, Vollkornprodukte und mageres Protein sind reich an Vitaminen und Mineralstoffen, die
        Gesundheit und Leistungsfähigkeit unterstützen. Ausreichende Flüssigkeitszufuhr ist ebenfalls wichtig für die Hydration
        und Leistungsfähigkeit während des Trainings. Eine ausgewogene Ernährung hilft Kraftsportlern, ihre Ziele zu erreichen
        und langfristig gesunde Fortschritte zu erzielen.
    </string>
    <string name="ecPullups">Klimmzüge</string>
    <string name="ecDeadlift">Kreuzheben</string>
    <string name="ecSquats">Kniebeuge</string>
    <string name="bpBiceps">Bizeps</string>
    <string name="bpBeine">Beine</string>
    <string name="bpSchulter">Schulter</string>
    <string name="bpRücken">Rücken</string>
    <string name="bpBauch">Bauch</string>
    <string name="bpBrust">Brust</string>
    <string name="bpArmeSubTitle">Arme Übung</string>
    <string name="bpBeineSubTitle">Bein Übung</string>
    <string name="bpSchulterSubTitle">Schulter Übung</string>
    <string name="bpRückenSubTitle">Rücken Übung</string>
    <string name="bpBauchSubTitle">Bauch Übung</string>
    <string name="bpBrustSubTitle">Brust Übung</string>
    <string name="weKH_Bicepscurls">KH-Bizepscurls</string>
    <string name="weLH_Bicepscurls">LH-Bizepscurls</string>
    <string name="weSZ_Bicepscurls">SZ-Bizepscurls</string>
    <string name="we_Pull_ups">Klimmzüge</string>
    <string name="weKH_Benchpress">KH-Bankdrücken</string>
    <string name="weLH_Benchpress">LH-Bankdrücken</string>
    <string name="weLH_Incline_Benchpress">LH-Schrägbankdrücken</string>
    <string name="weKH_Incline_Benchpress">KH-Schrägbankdrücken</string>
    <string name="we_Dips">Dips</string>
    <string name="we_Lunges">Ausfallschritte</string>
    <string name="weSZ_Push_ups">Liegestütze</string>
    <string name="weKH_Shoulderpress">KH-Schulterdrücken</string>
    <string name="weKH_SideRaise">KH-Seitheben</string>
    <string name="we_Crunches">Crunches</string>
    <string name="we_RisingLegs">Beine anheben</string>
    <string name="weLH_Squats">LH-Kniebeuge</string>
    <string name="weKH_SideRaiseLayOnBench">KH-Seitheben auf Bank </string>
    <string name="weCable_Row">MA-Kabelrudern</string>
    <string name="weKH_Row">KH-Rudern</string>
    <string name="weLH_Row">LH-Rudern</string>
    <string name="weKH_BicepscurlsInstruction">" Stehe aufrecht mit einer Kurzhantel in jeder Hand, die Handflächen zeigen nach vorne. Beuge deine Ellbogen, um die Hanteln zur Schulter zu bringen, indem du deine Bizepsmuskeln aktivierst. Senke die Hanteln langsam und kontrolliert wieder ab, um die Muskeln zu dehnen."</string>
    <string name="we_LungesInstruction">" Stehe aufrecht und mache einen großen Schritt nach vorne. Beuge beide Knie, bis beide Beine jeweils einen 90-Grad-Winkel bilden. Drücke dich mit dem vorderen Bein wieder nach oben und wiederhole auf der anderen Seite.     "</string>
    <string name="weLH_BicepscurlsInstructions">" Stehe aufrecht mit einer Langhantel in den Händen, die Hände in einer Schulterbreite halten, die Handflächen zeigen nach vorne. Beuge deine Ellbogen, um die Langhantel zur Schulter zu bringen, indem du deine Bizepsmuskeln aktivierst. Senke die Langhantel langsam und kontrolliert wieder ab, um die Muskeln zu dehnen.     "</string>
    <string name="weSZ_BicepscurlsInstructions">" Stehe aufrecht mit einer SZ-Hantel (SZ-Stange) in den Händen, die Hände in einer Schulterbreite halten, die Handflächen zeigen nach vorne. Beuge deine Ellbogen, um die SZ-Hantel zur Schulter zu bringen, indem du deine Bizepsmuskeln aktivierst. Senke die SZ-Hantel langsam und kontrolliert wieder ab, um die Muskeln zu dehnen.     "</string>
    <string name="weKH_SideRaiseInstructions">" Stehe aufrecht mit einer Kurzhantel in jeder Hand. Die Unterarme sind immer unter dem Ellenbogen. Hebe die Hanteln seitlich hoch, bis die Arme parallel zum Boden sind, indem du deine Schultermuskeln aktivierst. Senke die Hanteln langsam und kontrolliert ab, um die Muskeln zu dehnen.     "</string>
    <string name="weKH_ShoulderpressInstructions">" Stehe aufrecht mit einer Kurzhantel in jeder Hand, die Arme gebeugt und die Hände auf Schulterhöhe. Drücke die Hanteln nach oben über den Kopf, indem du deine Schultermuskeln aktivierst. Senke die Hanteln langsam und kontrolliert ab, um die Muskeln zu dehnen.     "</string>
    <string name="we_RisingLegsInstructions">" Greife eine Stange mit einem breiten Griff, die Handflächen zeigen von dir weg. Strecke die Beine gerade nach oben. Hebe die Beine langsam an, indem du deine Bauchmuskeln aktivierst, und senke sie dann langsam und kontrolliert wieder ab.         Achte beim Senken der Beine darauf, dass du sie nicht schwingst und höchstens parallel zu dein Rücken geführt werden.     "</string>
    <string name="we_DipsInstructions">" Greife zwei parallele Stangen und hebe deinen Körper, indem du deine Arme beugst, bis deine Arme fast gerade sind. Senke deinen Körper langsam und kontrolliert ab, um die Muskeln zu dehnen.     "</string>
    <string name="we_Pull_upsInstructions">" Greife eine Stange mit einem breiten Griff, die Handflächen zeigen von dir weg. Ziehe deinen Körper nach oben, indem du deine Arme beugst, bis dein Kinn über die Stange kommt. Senke deinen Körper langsam und kontrolliert ab, um die Muskeln zu dehnen.     "</string>
    <string name="we_CrunchesInstructions">" Liege flach auf dem Rücken mit den Knien gebeugt und den Füßen flach auf dem Boden. Hebe deine Schultern vom Boden, indem du deine Bauchmuskeln aktivierst, und senke sie dann langsam und kontrolliert wieder ab.     "</string>
    <string name="weKH_BenchpressInstructions">" Liege auf einer Bank mit einer Kurzhantel in jeder Hand, die Arme ausgestreckt über den Schultern. Senke die Hanteln langsam und kontrolliert nach unten, bis die Ellenbogen einen 90-Grad-Winkel bilden. Drücke die Hanteln nach oben, indem du deine Brustmuskeln aktivierst, bis die Arme wieder ausgestreckt sind.     "</string>
    <string name="weLH_BenchpressInstructions">" Liege auf einer Bank mit einer Langhantel über der Brust, die Arme ausgestreckt und die Hände in einer breiten Griffweite. Senke die Langhantel langsam und kontrolliert nach unten, bis die Ellenbogen einen 90-Grad-Winkel bilden. Drücke die Langhantel nach oben, indem du deine Brustmuskeln aktivierst, bis die Arme wieder ausgestreckt sind.     "</string>
    <string name="weLH_InclineBenchpressInstructions">" Liege auf einer schrägen Bank mit einer Langhantel über der Brust, die Arme ausgestreckt und die Hände in einer breiten Griffweite. Senke die Langhantel langsam und kontrolliert nach unten, bis die Ellenbogen einen 90-Grad-Winkel bilden. Drücke die Langhantel nach oben, indem du deine Brustmuskeln aktivierst, bis die Arme wieder ausgestreckt sind.     "</string>
    <string name="weKH_InclineBenchpressInstructions">" Liege auf einer schrägen Bank mit einer Kurzhantel in jeder Hand, die Arme ausgestreckt über den Schultern. Senke die Hanteln langsam und kontrolliert nach unten, bis die Ellenbogen einen 90-Grad-Winkel bilden. Drücke die Hanteln nach oben, indem du deine Brustmuskeln aktivierst, bis die Arme wieder ausgestreckt sind.     "</string>
    <string name="registerScreenText">Willkommen! Bitte mache deine Angaben.</string>
    <string name="registerBtnText">Registrieren</string>
    <string name="opt_my_profileText">Meine Profildaten</string>
    <string name="opt_my_healthText">Mein Gesundheitsstatus</string>
    <string name="opt3_my_favText">Meine Favoriten</string>
    <string name="opt4_my_filesText">Meine Daten</string>
    <string name="opt5_socialMediaText">Social Media Verknüpfungen</string>
    <string name="opt6_cloud_linksText">Cloud Verknüpfungen</string>
    <string name="opt7_inviteFriendsText">Freunden empfehlen</string>
    <string name="opt8_log_outText">Ausloggen</string>
    <string name="sortByText">Sortiere nach</string>
    <string name="alphabetAscendingText">Alphabet aufsteigend (a-z)</string>
    <string name="alphabetDescendingText">Alphabet absteigend (z-a)</string>
</resources>