<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingBottom="200dp"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FDECCE"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header_bottomSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/sortByText"
                android:textSize="30dp" />

            <RadioGroup
                android:id="@+id/radioG_exerciseSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <RadioButton
                    android:id="@+id/a_z_ascending"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="32dp"
                    android:text="@string/alphabetAscendingText"
                    android:checked="true"
                    android:textSize="20dp">

                </RadioButton>

                <RadioButton
                    android:id="@+id/z_a_descending"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/alphabetDescendingText"
                    android:textSize="20dp">

                </RadioButton>


            </RadioGroup>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>