<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logInConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_colour"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:fontFamily="@font/montserrat"
        android:padding="32dp"
        android:text="@string/registerScreenText"
        android:textColor="@color/white"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <ProgressBar
        android:id="@+id/registerProgressbar"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:visibility="gone"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/inputPasswordRepeatCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <Button
        android:id="@+id/submitButton"
        style="@style/customButton"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        app:cornerRadius="2dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/registerBtnText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerProgressbar" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="133dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/applogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/inputNameCard"
        style="@style/customUserInput"
        android:layout_width="match_parent"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        app:cardCornerRadius="4dp"
        app:strokeWidth="3dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInText">

        <EditText
            android:id="@+id/inputName"
            style="@style/editTextUserIntput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/nameInput"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="16dp" />
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/inputEmailCard"
        android:layout_width="match_parent"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="4dp"
        app:strokeWidth="3dp"
        style="@style/customUserInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNameCard">

        <EditText
            android:id="@+id/inputEmail"
            style="@style/editTextUserIntput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:fontFamily="@font/roboto"
            android:textSize="16dp"
            android:background="@null"
            android:hint="@string/eMailInput"
            android:ems="10"
            android:inputType="textEmailAddress" />

    </com.google.android.material.card.MaterialCardView>



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/inputPasswordCard"
        android:layout_width="match_parent"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        app:cardCornerRadius="4dp"
        app:strokeWidth="3dp"
        android:layout_marginTop="16dp"
        style="@style/customUserInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmailCard">

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            style="@style/editTextUserIntput"
            android:layout_height="match_parent"
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/passwordInput"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="16dp" />

    </com.google.android.material.card.MaterialCardView>



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/inputPasswordRepeatCard"
        android:layout_width="match_parent"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="4dp"
        app:strokeWidth="3dp"
        style="@style/customUserInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPasswordCard">

        <EditText
            android:id="@+id/inputPasswordRepeat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/editTextUserIntput"
            android:padding="12dp"
            android:fontFamily="@font/roboto"
            android:textSize="16dp"
            android:background="@null"
            android:hint="@string/passwordRepeatInput"
            android:ems="10"
            android:inputType="textPassword" />

    </com.google.android.material.card.MaterialCardView>


    <!--
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="68dp"
            android:layout_height="65dp"
            android:layout_margin="16dp"
            android:src="@drawable/arrow_back_fill0_wght400_grad0_opsz24"
            android:backgroundTint="@color/black"
            app:strokeWidth="1dp"
            app:tint="?android:attr/textColorPrimary"
            app:strokeColor= "@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    -->


</androidx.constraintlayout.widget.ConstraintLayout>



