<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tertiary"
    android:orientation="vertical"
    android:paddingBottom="90dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_Constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/profile_img"
            android:layout_marginTop="16dp"
            android:layout_width="140dp"
            android:layout_height="160dp"
            android:src="@drawable/account_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text=""
            android:textSize="26dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_img" />

        <TextView
            android:id="@+id/user_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCard_Background"
            style="@style/content_CardDecription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_Email">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/optionCard1"
                    style="@style/content_Card"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    app:strokeColor="@color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/opt_my_profileText"
                        android:textColor="@color/white"
                        android:textSize="20dp">

                    </TextView>


                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/optionCard2"
                    style="@style/content_Card"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    app:strokeColor="@color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/opt_my_healthText"
                        android:textColor="@color/white"
                        android:textSize="20dp">

                    </TextView>


                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/optionCard3"
                    style="@style/content_Card"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    app:strokeColor="@color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/opt3_my_favText"
                        android:textColor="@color/white"
                        android:textSize="20dp">

                    </TextView>


                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/optionCard4"
                    style="@style/content_Card"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    app:strokeColor="@color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/opt4_my_filesText"
                        android:textColor="@color/white"
                        android:textSize="20dp">

                    </TextView>


                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>



        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCard_Background2"
            style="@style/content_CardDecription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCard_Background">


            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/optionCard5"
                    style="@style/content_Card"
                    app:strokeColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/opt5_socialMediaText"
                        android:textColor="@color/white"
                        android:textSize="20dp">

                    </TextView>


                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/optionCard6"
                    style="@style/content_Card"
                    app:strokeColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/opt6_cloud_linksText"
                        android:textColor="@color/white"
                        android:textSize="20dp">

                    </TextView>

                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>




        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCard_Background3"
            style="@style/content_CardDecription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCard_Background2">


            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/optionCard7"
                    style="@style/content_Card"
                    app:strokeColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/opt7_inviteFriendsText"
                        android:textColor="@color/white"
                        android:textSize="20dp">

                    </TextView>


                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/optionCard8"
                    style="@style/content_Card"
                    app:strokeColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/opt8_log_outText"
                        android:textColor="@color/white"
                        android:textSize="20dp">

                    </TextView>

                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
